--- a/style2.css
+++ b/style2.css
@@ -1,274 +1,129 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
 }
-
-
-
-.menu__container{
-    display: flex;
-    list-style: none;
-    gap:20px;
+.menu__container {
+	display:flex;
+	list-style:none;
+	gap:20px;
 }
-
-
-
-
- .menu__container li:hover{
-    background-color: red;
+.menu__container li:hover {
+	background-color:red;
 }
-
-
-nav{
-    background-color: #f5668d;
-    color:white;
-    grid-area: nav;
-    padding: 5px;
+nav {
+	background-color:#f5668d;
+	color:white;
+	grid-area:nav;
+	padding: 5px;
 }
-
-#nosotros{
-    grid-area: nosotros;
-    /* margin-top: 20px; */
-    display: grid;
-    grid-template-areas: 
-    'titulo titulo titulo'
-    'imagen  texto texto';
-    /* grid-template-columns: 20% ;
-    grid-template-rows: 50px 100px; */
+#nosotros {
+	grid-area:nosotros;
+	/* margin-top:20px;*/
+	display:grid;
+	grid-template-areas:'titulo titulo titulo' 'imagen texto texto';
+	/* grid-template-columns:20%;grid-template-rows:50px 100px;*/
 }
-
-.nosotros-titulo{
-grid-area: titulo;
-
-text-align: center;
+.nosotros-titulo {
+	grid-area:titulo;
+	text-align:center;
 }
-
-
-.nosotros-texto{
-grid-area: texto;
-margin:20px;
+.nosotros-texto {
+	grid-area:texto;
+	margin:20px;
 }
-
-.nosotros-imagen{
- grid-area: imagen;
-
-
+.nosotros-imagen {
+	grid-area:imagen;
 }
-.nosotros-imagen img{
-height: 400px;
-    width: 450px;
-    margin:20px;
-
+.nosotros-imagen img {
+	height:400px;
+	width:450px;
+	margin:20px;
 }
-
-
-
-
-#productos{
-    grid-area: productos;
-    display: grid;
-    grid-template-areas: 
-    'ptitulo ptitulo ptitulo'
-    'lista vista vista';
+#productos {
+	grid-area:productos;
+	display:grid;
+	grid-template-areas:'ptitulo ptitulo ptitulo' 'lista vista vista';
 }
-
-.producto-titulo{
-    grid-area: ptitulo;
-   
-    text-align: center;
+.producto-titulo {
+	grid-area:ptitulo;
+	text-align:center;
 }
-
-.producto-lista{
-    grid-area: lista;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.producto-lista {
+	grid-area:lista;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
 }
-
-
-select{
-margin: 20px 0;
+select {
+	margin:20px 0;
 }
-
-button{
-    margin: 40px;
+button {
+	margin:40px;
 }
-
-
-.producto-vista{
-    grid-area: vista;
-    
-    display: flex;
-    padding: 20px;
-    justify-content: space-around;
-
+.producto-vista {
+	grid-area:vista;
+	display:flex;
+	padding:20px;
+	justify-content:space-around;
 }
-
-.producto-vista img{
-    height: 100px;
-    width: 100px;
-
+.producto-vista img {
+	height:100px;
+	width:100px;
 }
-
-
-
-span{
-<<<<<<< HEAD
-   margin-left: 700px;
-=======
-   margin-left: 600px;
->>>>>>> 5cb3b84857a99bcc0bd33c6c127b8a8f40634244
-} 
-
-footer{
-    grid-area: footer;
-    text-align: center;
+span {
+	margin-left:700px;
 }
-
-.modal{
-    position: fixed;
-    top:-100vh;
-    width: 100%;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-
-    display: flex;
+footer {
+	grid-area:footer;
+	text-align:center;
 }
-
-
-
-.ventana-modal{
-
-
- 
-
-    width: 365px;
-    height: 216px;
-    padding: 50px;
-    background-color:#f5668d;
-    text-align: center;
-
-    
+.modal {
+	position:fixed;
+	top:-100vh;
+	width:100%;
+	height:100vh;
+	align-items:center;
+	justify-content:center;
+	display:flex;
 }
-
-.btn-agrupar{
-    position: absolute;
-
-   text-align: center;
-  
+.ventana-modal {
+	width:365px;
+	height:216px;
+	padding:50px;
+	background-color:#f5668d;
+	text-align:center;
 }
-
-
-
-.modal2{
-    position: fixed;
-    top:-100vh;
-    width: 100%;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-
-    display: flex;
+.btn-agrupar {
+	position:absolute;
+	text-align:center;
 }
-
-
-
-.ventana-modal2{
-
-    width: 365px;
-    height: 216px;
-    padding: 50px;
-    background-color:#f5668d;
-    text-align: center;
-    
- 
-
-    
+.modal2 {
+	position:fixed;
+	top:-100vh;
+	width:100%;
+	height:100vh;
+	align-items:center;
+	justify-content:center;
+	display:flex;
 }
-
-
-
-.imagenes{
-    border:solid 4px #a366f5;
-    height: 130px;
-    width: 110px;
-
-
+.ventana-modal2 {
+	width:365px;
+	height:216px;
+	padding:50px;
+	background-color:#f5668d;
+	text-align:center;
 }
-
-.imagenes p{
-    background-color: #f5668d;
+.imagenes {
+	border:solid 4px #a366f5;
+	height:130px;
+	width:110px;
 }
-
-
-/* img{
-    margin:20px;
-} */
-
-/* .señora{
-    height: 200px;
-    width: 250px;
-} */
-
-/* h3{
-    text-align: center;
-    grid-area: h3;
-} */
-/* 
-select{
-        margin: 20px;
-        margin-top: 40px;
+.imagenes p {
+	background-color:#f5668d;
 }
-
-.pedir{
-    margin-top: 60px;
-    margin-left: 45px;
-
-}
-
-#imagen1{
-    grid-area: img1;
-    border:solid 5px;
-    height"nav nav nav nav nav"
-    "aside aside section1 section1 section1"
-    "h3 h3 h3 h3 h3"
-    "section2 img1 img2 img3 img4"
-
-.imagen2{
-    grid-area: img2;
-    border:solid 5px black ;
-    height: 150px;
-    width: 150px;
-}
-
-
-#imagen3{
-    grid-area: img3;
-  height: 150px;
-  width: 150px;
-border:solid 2px black;
-}}
-
-
-#imagen4{
-    grid-area: img4;
-   height: 150px;
-   width: 150px;
-border:solid 2px black;
-
-}
-
-
-
-.container{
-    display:grid;
-    grid-template-areas: 
-    'nav nav'
-    'nosotros nosotros'
-    'productos productos'  
-    'footer footer' 
-}
+/* img{margin: 20px;}*/
+/* .señora{height:200px;width: 250px;}*/
+/* h3{text-align:center;grid-area: h3;}*/
+/* select{margin:20px;margin-top:40px;}.pedir{margin-top:60px;margin-left:45px;}#imagen1{grid-area:img1;border:solid 5px;height"nav nav nav nav nav" "aside aside section1 section1 section1" "h3 h3 h3 h3 h3" "section2 img1 img2 img3 img4".imagen2{grid-area:img2;border:solid 5px black;height:150px;width:150px;}#imagen3{grid-area:img3;height:150px;width:150px;border:solid 2px black;}}#imagen4{grid-area:img4;height:150px;width:150px;border:solid 2px black;}.container{display:grid;grid-template-areas: 'nav nav' 'nosotros nosotros' 'productos productos' 'footer footer'}
